syntax = "proto3";

package order;

option go_package = "build/order";

import "protos/global/global.proto";

// 包邮模板
message FreightTemplatesFree {
  // 包邮id
  string freeId = 1;  // @gotags: `gorm:"primary_key;<-:create"`
  // 地区code(省或者城市)
  string areaCode = 2;  // @gotags: `gorm:"<-" validate:"required"`
  // 包邮件数
  int64 quantity = 3;  // @gotags: `gorm:"<-" validate:"required"`
  // 包邮金额
  double price = 4;  // @gotags: `gorm:"<-" validate:"required"`
  // 计费方式
  int64 billingMethods = 5;  // @gotags: `gorm:"<-" validate:"required"`
  // 删除状态
  bool delStatus = 6;  // @gotags: `gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"`
  // 创建人
  string createBy = 7;  // @gotags: `gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"`
  // 修改人
  string updateBy = 8;  // @gotags: `gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"`
  // 创建时间
  string createTime = 9;  // @gotags: `gorm:"->" swaggerignore:"true"`
  // 修改时间
  string updateTime = 10;  // @gotags: `gorm:"->" swaggerignore:"true"`
}

// FreightTemplatesFreeIds
message FreightTemplatesFreeIds {
  repeated string freeId = 1;
  string userId = 2;
}

// FreightTemplatesFreePageAuthQuery 免邮分页查询
message FreightTemplatesFreePageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;  //  @gotags: `validate:"required,min=1" example:"1"`
  // 分页长度
  int64 pageSize = 2;  //  @gotags: `validate:"required,min=10,max=100" example:"10"`
  // 查询参数
  message QueryParams {
    string areaCode = 1;
  }
  // 查询参数
  QueryParams params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

// FreightTemplatesFreeResponse 返回数据
message FreightTemplatesFreeResponse {
  int64 count = 1;  // 数据量
  string Msg = 2;  // 错误信息
  FreightTemplatesFree detail = 3;  // 详情
  repeated FreightTemplatesFree list = 4;  // 列表
}

service FreightTemplatesFreeService {
  //  Create 地区新增信息
  rpc Create(FreightTemplatesFree) returns (FreightTemplatesFreeResponse);

  // Update 更新地区信息
  rpc Update(FreightTemplatesFree) returns (FreightTemplatesFreeResponse);

  // Delete 删除地区信息
  rpc Delete(FreightTemplatesFreeIds) returns (FreightTemplatesFreeResponse);

  // FindPageList 查询地区列表
  rpc FindPageList(FreightTemplatesFreePageAuthQuery) returns (FreightTemplatesFreeResponse);

  // FindById 查询地区详情
  rpc FindById(FreightTemplatesFreeIds) returns (FreightTemplatesFreeResponse);
}